--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>NG-ZORRO - Ant Design Of Angular</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"></head><body><app-root></app-root><script type="text/javascript" src="inline.ab4a58d4d9dd21118527.bundle.js"></script><script type="text/javascript" src="polyfills.9b7da92956782be3bf07.bundle.js"></script><script type="text/javascript" src="vendor.1748d0ad630048c7dbb0.bundle.js"></script><script type="text/javascript" src="main.6f545374eab2b6f156ea.bundle.js"></script></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>NG-ZORRO - Ant Design Of Angular</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"></head><body><app-root></app-root><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-52892298-2', 'auto');
+    ga('send', 'pageview');</script><script type="text/javascript" src="inline.339fab44c997b96578fd.bundle.js"></script><script type="text/javascript" src="polyfills.9b7da92956782be3bf07.bundle.js"></script><script type="text/javascript" src="vendor.1748d0ad630048c7dbb0.bundle.js"></script><script type="text/javascript" src="main.769b5c0537609ddfdb1f.bundle.js"></script></body></html>
