--- a/version/0.7.x/index.html
+++ b/version/0.7.x/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>NG-ZORRO - Ant Design Of Angular</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.95b0ec0e871655e77b02.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript">// Single Page Apps for GitHub Pages
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>NG-ZORRO - Ant Design Of Angular</title><base href="/version/0.7.x/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.95b0ec0e871655e77b02.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript">// Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
       // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
       // ----------------------------------------------------------------------
