--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
     <!-- Hotjar Tracking Code for ng.ant.design -->
     <script>
       (function(h,o,t,j,a,r){
@@ -59,5 +60,5 @@
 
       gtag('config', 'UA-52892298-2');
     </script>
-  <script type="text/javascript" src="runtime.2f55a56af98b27711965.js"></script><script type="text/javascript" src="polyfills.5e92cd0193e2ddaa406a.js"></script><script type="text/javascript" src="main.a40833d521ba5de4b937.js"></script></body>
+  <script type="text/javascript" src="runtime.b3eb2627f0a00f4e9d57.js"></script><script type="text/javascript" src="polyfills.5e92cd0193e2ddaa406a.js"></script><script type="text/javascript" src="scripts.03e042f1f102bf0e2ed8.js"></script><script type="text/javascript" src="main.42fa7bf5e99fb67bd61e.js"></script></body>
 </html>
